tests/errors/operators-invalid-binary-literal.ari
fn main() -> i64 {
  let value = 0b102;
  return value;
}
